# wordsmith-engine

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
examples/: band_names.py  basic_usage.py  character_names.py  deterministic_rng.py  exotic_characters.py  fictional_materials.py  grammar_prefixes.py  identifiers_and_gangs.py  ship_and_town_names.py  work_titles.py
src/wordsmith/: __init__.py
src/wordsmith/assets/: __init__.py
src/wordsmith/core/: __init__.py  base.py  components.py
src/wordsmith/factories/: __init__.py  exotic_character_factory.py  readable_unique_identifier.py
src/wordsmith/generators/: __init__.py  band_name.py  criminal_gang_name.py  fictional_element_name.py  fictional_mineral_name.py  nautical_ship_name.py  town_name.py  work_title.py
src/wordsmith/names/: __init__.py  ancient_name.py  gender.py  given_name.py  person_name.py  surname.py  weird_name.py
src/wordsmith/specials/: __init__.py  exotic_character.py  readable_unique_identifier.py
src/wordsmith/util/: __init__.py  randoms.py  resources.py  strings.py
src/wordsmith/words/: __init__.py  articles.py  base.py
tests/: __init__.py  test_core_components.py  test_exotic_character.py  test_factories.py  test_generators.py  test_names.py  test_words.py  utils.py
