[project]
name = "wordsmith"
version = "0.1.0"
description = "Python port of the Wordsmith text-generation DSL."
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = ["tests/**"]
includes = ["src/wordsmith/assets/*.json"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "flake8>=7.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pdm.scripts]
test = "pytest"
lint = "flake8 src tests examples"
