[project]
name = "wordsmith-engine"
dynamic = ["version"]
description = "Composable, deterministic-friendly text-generation components for Python."
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/btfranklin/wordsmith-engine"
Issues = "https://github.com/btfranklin/wordsmith-engine/issues"
Changelog = "https://github.com/btfranklin/wordsmith-engine/releases"
Repository = "https://github.com/btfranklin/wordsmith-engine.git"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
excludes = ["tests/**"]
includes = ["src/wordsmith/assets/*.json"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pdm.scripts]
test = "pytest"
lint = "ruff check src tests examples"

[tool.ruff.lint]
select = ["E", "F", "W"]
